fixed horizontal scroll bug

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,6 +23,8 @@ body {
   flex-direction: column;
   width: 100%;
   min-height: 100vh;
+  position: relative;
+  overflow-x: clip;
 }
 
 footer {
